2018-05-27 1,新增 极验模块 2,编写 第二期数据实验室模块 3,调整 API接口 可以实现跨域

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -231,3 +231,13 @@ footer {
   }
 }
 
+// 验证码样式
+#geetest-captcha {
+  margin: 10px 0;
+  .geetest_holder, .geetest_wind, .geetest_wait_compute, .geetest_detect {
+    width: 100% !important;
+  }
+}
+.geetest_copyright_tip, .geetest_logo, .geetest_feedback {
+  display: none;
+}
